--- a/style/style.css
+++ b/style/style.css
@@ -403,18 +403,19 @@ h2{
 
 
   .card{
-    margin-top: 60px;
+    margin-left: -270px;
+    margin-top: 50px;
     display: grid;
     grid-template-columns: 300px 300px 300px;
-    grid-gap: 35px;
+    grid-gap: 70px 180px;
     align-items: end;
      
   }
 
   .flip-card-container {
-    width: 310px;
-    height: 500px;
-    margin: auto;
+    width: 400px;
+    height: 300px;
+    margin: 10px;
     perspective: 1000px;
   }
 
@@ -444,7 +445,7 @@ h2{
         
 }
 .text-muted{
-    word-spacing: 10px;
+    word-spacing: 7px;
     text-align: center;
     vertical-align: middle;
 }
@@ -474,7 +475,7 @@ h2{
         //transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
         position: absolute;
         z-index: 10;
-        top: 80%;
+        top: 85%;
         left: 10%;   
     }
     .btn-success {
@@ -490,30 +491,10 @@ h2{
         font-size: 1rem;
         line-height: 1.5;
         border-radius: 0.25rem;
-        //transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
         position: absolute;
         z-index: 10;
-        top: 80%;
+        top: 85%;
         left: 55%;
-    }
-    .btn-dark1{
-        display: inline-block;
-        font-weight: 400;
-        color: white;
-        text-align: center;
-        vertical-align: middle;
-        cursor: pointer;
-        background-color: red;
-        border: 1px solid transparent;
-        padding: 0.375rem 0.75rem;
-        font-size: 1rem;
-        line-height: 1.5;
-        border-radius: 0.25rem;
-        //transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-        position: absolute;
-        z-index: 10;
-        top: 90%;
-        left: 33%;
     }
     
 }
@@ -958,6 +939,8 @@ h2{
     }
     .card{
         grid-template-columns: 2fr;
+        justify-content: center;
+        margin-left: 0px;
     }
 }
 
@@ -1064,6 +1047,8 @@ h2{
                     color: var(--color-common);
             }
             }
+
+     
 
 /*@media only screen and (max-width: 700px) {
     .logo {
