--- a/style/style.css
+++ b/style/style.css
@@ -374,7 +374,7 @@ h2{
       
     .left-about{
     position: absolute;
-    left: 200px;
+    left: 70px;
     right: 600px;    
     padding-right: 0.2rem;
     padding-left: 0.2rem;
@@ -441,11 +441,11 @@ h2{
         text-align: center;
         vertical-align: middle;
         display: flex;
-        margin: 0.5rem 1rem;
+        margin: 0.5rem 4rem;
         
 }
 .text-muted{
-    word-spacing: 7px;
+    word-spacing: 10px;
     text-align: center;
     vertical-align: middle;
 }
@@ -491,11 +491,13 @@ h2{
         font-size: 1rem;
         line-height: 1.5;
         border-radius: 0.25rem;
+        //transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
         position: absolute;
         z-index: 10;
         top: 85%;
         left: 55%;
     }
+   
     
 }
 .btn-dark {
@@ -879,12 +881,14 @@ h2{
     .right-header{
         grid-row: 1;
         width: 90%;
-        margin: 0 auto;
+        margin: 0 0;
        .name{
         font-size: 1.2rem ;
-       } 
-       
+       }   
     }
+    .right-header .name  .type{
+        font-size: 0.2rem ;
+       } 
     .header-content .left-header .image .grayscale{
         margin: 0 auto;
         height: 130%;
@@ -939,8 +943,8 @@ h2{
     }
     .card{
         grid-template-columns: 2fr;
-        justify-content: center;
         margin-left: 0px;
+        justify-content: center;
     }
 }
 
@@ -1047,8 +1051,6 @@ h2{
                     color: var(--color-common);
             }
             }
-
-     
 
 /*@media only screen and (max-width: 700px) {
     .logo {
