--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,7 @@
     --color-grey-4:#FFFFFF;
     --color-grey-5:#ededed; 
     --color-common: #FFFFFF;  
+    
 }
 
 .main-content{
@@ -870,9 +871,17 @@ h2{
     .header-content{
         grid-template-columns: 1fr;
         padding-bottom: 6rem;
+        display: inline;
+
+        .image{
+            width: 700px;
+            margin-left: 1.5rem;
+            padding-left: 0.1rem;
+        }
 
     }
     .left-header{
+        
         .h-shape{
 
        display: none;
@@ -888,7 +897,7 @@ h2{
     }
     .right-header .info-con{
         margin-left: 10px;
-        margin-right: -80px;
+        margin-right: -140px;
     }
     .right-header .name  .type{
         font-size: 0.2rem ;
@@ -906,9 +915,11 @@ h2{
         width: 400px;
 
     }
+    .btn-con{
+        margin-top: -2rem;
+    }
     .main-btn{
-        margin-left:50px;
-        margin-right: -30px;    
+        margin-bottom:50px;   
     }
     
    
@@ -916,7 +927,8 @@ h2{
 
 @media screen and (max-width: 600px){
     .about-container{
-        grid-template-columns: 1fr;
+        
+        
         .right-about{
             position: absolute;
             text-align: justify;
@@ -1072,27 +1084,151 @@ h2{
             }
             }
 
-            @media only screen and (max-width: 820px)  and (max-height: 1180px) {
-                .left-header{
-                    .h-shape{
-                    display: none;
-                }     
+            @media only screen and (min-width: 700px) and (max-width: 1500px)  and (min-height: 1024px) and (max-height: 1400px)
+
+             {
+
+                .header-content {
+                    grid-template-columns: 1fr;
+                    padding-bottom: 6rem;
+                    padding-left: 0.5rem;
+                    align-items: center;
+                    overflow: hidden;
+                    .right-header{
+                        padding-left: 5rem;
+                        padding-top: 3rem;
+                        padding-right: 6rem;
+                        }
                 }
 
-                
-                
+                .controlls{
+                    top: auto;
+                    bottom: 0;
+                    flex-direction: row;
+                    justify-content: center;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    width: 100%;
+                    .control{
+                        margin: 1rem .3rem
+                    }
+                }
+                .theme-btn{
+                    top: 7%;
+                    right: 0.5rem;
+                }
+
+                .left-header{
+                    padding-top: 2rem;
+                    margin-left: 3rem;
+                    margin-right: auto;
+                    .h-shape{
+                    display: none;
+
+                } 
+                .header-content .left-header .image .grayscale { 
+                    margin-left: -20px;
+                    height: 450px;
+                    width: 400px;   
+                }
+      
                 .right-contact{
                     margin-left: 6rem;
                 }
 
-                .submit-btn{
-                    left: 37px;
+               
+                
+            } 
+            .about-container {
+               
+                .left-about{
+                    right:90px;
+                   
                 }
 
-                
+                .right-about .container{
+                    align-items: center;
+                    text-align: justify;
+                    justify-content: center;
+                     padding-top: 520px;
+                     padding-bottom: 110px;
+                     padding-right: 110px;
+                     
+                    /* padding-left: 90px;
+                    padding-right: 200px;
+                     */
 
+                    .fadeInUp .row .fadeInUp{
+                        display: grid;
+                        grid-template-columns: 2fr;
+                    }
+                }
+             
                 
-            }            
+               
+            }
+           
+
+            .right-contact{
+                margin-left: -40px;
+                padding-inline: 0rem;
+                width: 350px;
+           }
+            .submit-btn{
+                left: 40px;
+            }
+
+            .timeline ul {
+                grid-template-columns: 7fr var(--line-w) 7fr;
+                width: 500px; 
+                text-align: justify;
+                margin-left: -95px;
+      
+               
+              }
+
+              .timeline ul li {
+                grid-column: 2;
+                margin-inline: var(--inlineP);
+                grid-row: span 2;
+                display: grid;
+                grid-template-rows: min-content min-content min-content;
+            }
+
+            .timeline ul li .title, .timeline ul li .descr {
+               padding-inline: 0rem;
+            }
+
+            .card{
+                align-items: center;
+                margin-left: -250px;
+                grid-template-columns: 300px 300px;
+                column-gap: 90px;
+                
+                .flip-card-container{
+                    width: 370px;
+                    height: 250px;
+                    .flip-card .card-back p{
+                        font-size: 1rem;
+                    }
+                }
+            }
+
+            @media only screen and (min-width: 1024px) and (max-width: 1366px) {
+                .timeline ul {
+                    margin-left: 0px;
+                }
+                .about-container .right-about .container {
+                        padding-right: 190px;
+                        padding-top: 450px;
+                }
+                .card{
+                    column-gap: 190px;
+                }
+            }
+        }
+            
+           
 
 /*@media only screen and (max-width: 700px) {
     .logo {
@@ -1111,16 +1247,7 @@ h2{
         .name{
             font-size: 1.5rem;
         }
-     }
-
-
-
-
-
-
-   
-
-
+     }*/
 
 
 
