--- a/style/style.css
+++ b/style/style.css
@@ -63,6 +63,7 @@ section{
     transform: translateY(-100%) scale(0);
     transition: all .4s ease-in-out;
     background-color: var(--color-primary);
+    
 }
 
 .sec1{
@@ -119,6 +120,46 @@ section{
   0%{transform:translate(0px, 100px); opacity: 0;}
   100%{transform:translate(0px, 0); opacity: 1;}
 }
+
+
+.intro{
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #FFFFFF;
+    transition: 1.8s
+  }
+  
+  .logo-header{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    color: #000000;
+  }
+  
+  .logo{
+    position: relative;
+    display: inline-block;
+    bottom: -20px;
+    opacity: 0;
+  }
+  
+  .logo.active{
+    bottom: 0;
+    opacity: 1;
+    transition: ease-in-out 0s;    
+  }
+  
+  .logo.fade{
+    bottom: 150px;
+    opacity: 0;
+    transition: ease-in-out 0.5s;
+  }
+
 .list-group-item {
     position: relative;
     display: block;
@@ -131,8 +172,8 @@ section{
 }
 
 .controlls{
-    position: fixed;
-    z-index: 10;
+    position: absolute;
+    z-index: 0;
     top: 50%;
     right: 3%;
     display: flex;
@@ -225,7 +266,7 @@ section{
 
 
 /*logo*/
-.logo {
+.logo1 {
     position: fixed !important;
     top: 5px;
     right: 10px;
